refs #2834 fix each line is a bit too high

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -454,7 +454,7 @@ tr.level12 td.label {
 tr td.label img.plusMinus {
   margin-left: -1em;
   margin-right: 3px;
-  margin-top: -6px;
+  margin-top: -7px;
 }
 
 .pk-emptyDataTable {
