--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -411,6 +411,10 @@ table.dataTable {
             color: @brand-black;
             background: @silver-95;
 
+            .label {
+              line-height: normal;
+            }
+
             .value {
               .font-default(13px, 16px);
             }
